# bezeye

./: Build.txt  CHANGELOG.md  Compare.md  Makefile.am  README.md  _config.yml  configure.ac  diffgif.cc  gen-bezeye.sh  index.md  mergeraw.cc  original-7.pal  palette-10.pal  palette-11.pal  palette-12.pal  palette-13.pal  palette-14.pal  palette-15.pal  palette-16.pal  palette-4.pal  palette-5.pal  palette-6.pal  palette-7.pal  palette-8.pal  palette-9.pal  render.php  scq6.cc  storyboard.html  wing.php
_data/: home.yml
